# yield-mind

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agent/: .env.example  package.json  tsconfig.json  wrangler.toml
agent/src/: index.ts
contracts/: .env.example  .gitignore  foundry.toml
contracts/script/: Deploy.s.sol  DeployRHC.s.sol
contracts/src/: MockUSDC.sol  StrategyRegistry.sol  Vault.sol
contracts/src/interfaces/: IERC4626.sol  IStrategyRegistry.sol
contracts/stylus/agent-executor/: Cargo.toml  Stylus.toml  deploy.sh
contracts/stylus/agent-executor/src/: lib.rs
contracts/test/: Vault.t.sol
frontend/: .env.example  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ApprovalGuard.tsx  Dashboard.tsx  Faucet.tsx  Leaderboard.tsx  Navbar.tsx  PortfolioChart.tsx  PositionCard.tsx  Providers.tsx  StrategyForm.tsx  TerminalHeader.tsx  TransactionToast.tsx  VaultManager.tsx
frontend/src/hooks/: useVault.ts
frontend/src/lib/: contracts.ts  wallet.tsx
frontend/src/types/: index.ts
