[package]
name = "agent-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.10"
alloy-primitives = "1"
alloy-sol-types = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
hex-literal = "0.4"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true

[lib]
crate-type = ["lib", "cdylib"]
